--- a/BE-Template/package.json
+++ b/BE-Template/package.json
@@ -9,11 +9,13 @@
     "sqlite3": "^4.0.1"
   },
   "scripts": {
-    "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "server": "nodemon ./src/services/server.js",
+    "seed": "node ./scripts/seedDb.js",
+    "client": "cd ../frontend && npm start",
+    "start": "concurrently \"npm run server \" \" npm run client\" "
   },
   "devDependencies": {
-    "concurrently": "4.1.0",
+    "concurrently": "^4.1.0",
     "nodemon": "1.19.1"
   },
   "engines": {
